--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 </head>
 
-<body class="old_sty bg_default">
+<body class="">
 <!-- 还有这样的弹窗 -->
 <div id="menu-model">
     <iframe name="left" id="left" class="left_model" height="100%" width="100%" border="0" frameborder="0" scrolling="auto" src="./nav/webapp/left.html"></iframe>
@@ -38,11 +38,10 @@
 </header>
 <div class="home-header-usr">
     <div style="position: relative; height: 70px;">
-        <img id="imagesUrl" src="images/admin.jpg" />
-        <span id="msgSpan1" style="position: absolute;top: 10px;right: 85px;border-radius: 50%;background: red;height: 20px;width: 20px;color: #272828;line-height: 18px;font-size: 12px;text-align: center;">0</span>
-        <span id="topLoginName"></span>
+        <img id="imagesUrl" src="./nav/webapp/images/admin.jpg" />
+        <span id="topLoginName">absolute</span>
     </div>
-    <div class="iconfont setting_index"><img src="./images/nav_btn_set2.png" /></div>
+    <div class="iconfont setting_index"><img src="./nav/webapp/images/nav_btn_set2.png" /></div>
     <ul id="home-header-usr-ul" style="">
         <li onclick="showUserInfo()"><i class="iconfont">&#xe66a;</i>个人信息</li>
         <li onclick="showUpdatePwd()"><i class="iconfont">&#xe65a;</i>修改密码</li>
@@ -51,15 +50,15 @@
         <li class="index_skin" style="cursor: auto;padding: 10px 11px; border-top: 1px solid #ddd; color: #c3cac8;">
             skin
             <div class="skin_bg">
-                <img class="skin_img" src="./images/small-bg.jpg" />
-                <img class="skin_img" src="./images/small-bg2.jpg" />
-                <img class="skin_img" src="./images/small-bg3.jpg" />
-                <img class="skin_img" src="./images/small-bg4.jpg" />
-                <img class="skin_img" src="./images/small-bg5.jpg" />
-                <img class="skin_img" src="./images/small-bg6.jpg" />
-                <img class="skin_img" src="./images/small-bg7.jpg" />
-                <img class="old_style_img" src="./images/bgold.jpg" />
-                <img class="new_style_img" src="./images/bgold.jpg" />
+                <img class="skin_img" src="./nav/webapp/images/small-bg.jpg" />
+                <img class="skin_img" src="./nav/webapp/images/small-bg2.jpg" />
+                <img class="skin_img" src="./nav/webapp/images/small-bg3.jpg" />
+                <img class="skin_img" src="./nav/webapp/images/small-bg4.jpg" />
+                <img class="skin_img" src="./nav/webapp/images/small-bg5.jpg" />
+                <img class="skin_img" src="./nav/webapp/images/small-bg6.jpg" />
+                <img class="skin_img" src="./nav/webapp/images/small-bg7.jpg" />
+                <img class="old_style_img" src="./nav/webapp/images/bgold.jpg" />
+                <img class="new_style_img" src="./nav/webapp/images/bgold.jpg" />
             </div>
         </li>
     </ul>
