--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/head.css?v=3" />
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/custom.css?v=3" />
     <link rel="stylesheet" type="text/css" href="./css/indexDefault.css">
+    <link rel="stylesheet" type="text/css" href="./css/public_style.css">
 	<!-- JQUERY -->
 	<script type="text/javascript" src="./js/jquery/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.form.js"></script>
@@ -57,7 +58,7 @@
     <div id="menu-btn"></div>
     <div class="home-logo">
         <h1 style="margin-top:0;">
-            <a onclick="toHomePage()"><img alt="" src="./nav/webapp/images/portal_Login_logo01.png" /></a>
+            <a onclick="toHomePage()"><img alt="" src="./nav/webapp/images/portal_Login_logo02.png" /></a>
             <!--<a onclick="toHomePage()"><img th:src="@{/images/logo-crm.png}" alt="" /></a>-->
         </h1>
     </div>
