--- a/table.html
+++ b/table.html
@@ -20,7 +20,8 @@
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/index.css?v=3" />
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/head.css?v=3" />
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/custom.css?v=3" />
-    <link rel="stylesheet" type="text/css" href="./css/indexDefault.css">
+	<link rel="stylesheet" type="text/css" href="./css/indexDefault.css">
+	<link rel="stylesheet" type="text/css" href="./css/public_style.css">
 	<!-- JQUERY -->
 	<script type="text/javascript" src="./js/jquery/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.form.js"></script>
