--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" type="text/css" href="./nav/webapp/css/custom.css?v=3" />
     <link rel="stylesheet" type="text/css" href="./css/indexDefault.css">
     <link rel="stylesheet" type="text/css" href="./css/public_style.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_790454_cbl6qmgfsu8.css">
+    <link rel="stylesheet" href="https://at.alicdn.com/t/font_790454_cbl6qmgfsu8.css">
 	<!-- JQUERY -->
 	<script type="text/javascript" src="./js/jquery/jquery-2.0.3.min.js"></script>
 	<script type="text/javascript" src="./js/jquery.form.js"></script>
@@ -51,9 +51,6 @@
 
 <body class="">
 <!-- 还有这样的弹窗 -->
-<div id="menu-model">
-    <iframe name="left" id="left" class="left_model" height="100%" width="100%" border="0" frameborder="0" scrolling="auto" src="./nav/webapp/left.html"></iframe>
-</div>
 <!-- 页眉 -->
 <header class="home-header new_home_header">
     <div id="menu-btn"></div>
@@ -80,9 +77,9 @@
             <div class="temporary">
                 <ul class="temporary_list">
                     <li>
-                        <a></a>
+                        
                     </li>
-                    <li><a></a></li>
+                    <li></li>
                     <li></li>
                     <li></li>
                     <li></li>
