--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
         <td class="td-hidden td-left" width="250" valign="t0op" style="border-right: 1px solid #ccc;">
             <div class="temporary">
                 <ul class="temporary_list">
-                    <li>
-                        
-                    </li>
                     <li></li>
                     <li></li>
                     <li></li>
+                    <li><a>tabs</a></li>
                     <li></li>
                     <li><a>table</a></li>
     
