--- a/table.html
+++ b/table.html
@@ -113,10 +113,10 @@
 									</a>
 									<!-- Split button -->
 									<div class="btn-group">
-										<span type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+										<span class="btn btn-danger dropdown-toggle btn-group-more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 											<i class="iconfont icon-gengduo2"></i>
 										</span>
-										<ul class="dropdown-menu">
+										<ul class="dropdown-menu btn-group-more-left" role="menu" aria-labelledby="menu1">
 											<li><a href="#">Action</a></li>
 											<li><a href="#">Another action</a></li>
 											<li><a href="#">Something else here</a></li>
@@ -147,9 +147,6 @@
 									<i class="fa fa-table"></i>col-md-4
 								</h4>
 								<div class="tools">
-									<a class="add" href="#" target="addParking" title="新增车辆信息">
-										<i class="fa fa-plus"></i>新增
-									</a>
 								</div>
 							</div>
 							<div class="box-body">
@@ -167,9 +164,6 @@
 									<i class="fa fa-table"></i>col-md-4
 								</h4>
 								<div class="tools">
-									<a class="add" href="#" target="addParking" title="新增车辆信息">
-										<i class="fa fa-plus"></i>新增
-									</a>
 								</div>
 							</div>
 							<div class="box-body">
@@ -187,9 +181,6 @@
 									<i class="fa fa-table"></i>col-md-4
 								</h4>
 								<div class="tools">
-									<a class="add" href="#" target="addParking" title="新增车辆信息">
-										<i class="fa fa-plus"></i>新增
-									</a>
 								</div>
 							</div>
 							<div class="box-body">
